--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "scripts": {
     "build": "rollup --config",
     "pretest": "ensure-node-env",
-    "test": "eslint ."
+    "test": "eslint .",
+    "publish": "npm test && npm run build && npm publish"
   },
   "repository": {
     "type": "git",
@@ -36,6 +37,10 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.5.1",
     "eslint_d": "^5.2.2",
-    "rollup": "^0.58.2"
+    "rollup": "^0.58.2",
+    "rollup-plugin-commonjs": "^9.1.3",
+    "rollup-plugin-shebang": "^0.1.4",
+    "rollup-plugin-uglify": "^3.0.0",
+    "uglify-es": "^3.3.9"
   }
 }
