--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build": "rollup --config",
     "pretest": "ensure-node-env",
     "test": "eslint .",
-    "publish": "npm test && npm run build && npm publish"
+    "prepublish": "npm test && npm run build"
   },
   "repository": {
     "type": "git",
