--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "npm": "^5.6.0"
   },
   "scripts": {
+    "rollup": "rollup",
     "build": "rollup --config",
+    "watch": "rollup --config --watch",
     "pretest": "ensure-node-env",
     "test": "eslint .",
-    "prepublish": "npm test && npm run build"
+    "prepublishOnly": "npm test && npm run build"
   },
   "repository": {
     "type": "git",
@@ -42,5 +44,9 @@
     "rollup-plugin-shebang": "^0.1.4",
     "rollup-plugin-uglify": "^3.0.0",
     "uglify-es": "^3.3.9"
+  },
+  "dependencies": {
+    "chalk": "^2.4.1",
+    "semver": "^5.5.0"
   }
 }
